--- a/iframe/reloj.css
+++ b/iframe/reloj.css
@@ -15,7 +15,7 @@ body {
 
 .wrap {
 	width: 90%;
-	max-width: 1000px;
+	max-width: 500px;
 	border-radius: 60px;
 	/*margin: auto;*/
 }
@@ -28,7 +28,7 @@ body {
 
 .widget p {
 	display: inline-block;
-	line-height: 1em;
+	line-height: .9em;
 }
 
 .fecha {
@@ -49,7 +49,7 @@ body {
 	margin-bottom: 0.3125em;
 	/*margin-bottom: 5px;*/
 	background: transparent;
-	border-width: 1.5px;
+	border-width: 2px;
 	border-style: solid;
 	border-color: white;
 	padding: 5px;
